--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,10 @@
             "styles": [
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-                "node_modules/@fortawesome/fontawesome-free/css/all.css"
+                "node_modules/@fortawesome/fontawesome-free/css/all.css",
+                "node_modules/@fontsource/rubik/700.css",
+                "node_modules/@fontsource/raleway/400.css",
+                "node_modules/@fontsource/raleway/500.css"
             ],
             "scripts": ["node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"],
             "server": "src/main.server.ts",
@@ -100,7 +103,10 @@
             "styles": [
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-                "node_modules/@fortawesome/fontawesome-free/css/all.css"
+                "node_modules/@fortawesome/fontawesome-free/css/all.css",
+                "node_modules/@fontsource/rubik/700.css",
+                "node_modules/@fontsource/raleway/400.css",
+                "node_modules/@fontsource/raleway/500.css"
             ],
             "scripts": [
                   "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
