--- a/angular.json
+++ b/angular.json
@@ -34,12 +34,7 @@
                 "node_modules/@fontsource/raleway/400.css",
                 "node_modules/@fontsource/raleway/500.css"
             ],
-            "scripts": ["node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"],
-            "server": "src/main.server.ts",
-            "outputMode": "server",
-            "ssr": {
-              "entry": "src/server.ts"
-            }
+            "scripts": ["node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"]
           },
           "configurations": {
             "production": {
